--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_.PRODUCTION=TRUE
-REACT_APP_.BACKEND_ADDR=localhost:8000
+REACT_APP_.BACKEND_ADDR=soft-focus-superhero.herokuapp.com
 URLOGIN=/login
